--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <script src="https://kit.fontawesome.com/5dbf1108d2.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
 </head>
 <link rel="stylesheet" type="text/css" href="css/index.css">
 
@@ -48,7 +52,7 @@
     <section class="tops">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12" id="homeContent">
+                <div class="col-lg-12 col-sm-12" id="homeContent">
                     <p> A Website built for the Community by the Community </p>
                 </div>
             </div>
@@ -61,6 +65,7 @@
     </section>
 
     <section class="bgc">
+
         <div class="bg">
             <img class="bgs" src="./webtech-1.jpg" />
         </div>
@@ -122,17 +127,20 @@
 
     </section>
     <section class="portfolio" id="portfolio">
-    </section>
+
     <div class="row">
-        <div class="col-sm col-lg-6 announce">
-            Always be updated about our upcoming annoucements!
-            <button type="button" class="btn btn-sm buttonA">See More</button>
+        <div class="col-sm-12 col-lg-6 announce">
+          <p> Always be updated about our upcoming annoucements! <p>
+          <button type="button" class="btn btn-sm buttonA">See More</button>
         </div>
 
-        <div class="col-sm col-lg-6">
+        <div class="col-sm-12 col-lg-6 announceImg">
             <img class="animg" src="https://www.trainingjournal.com/sites/www.trainingjournal.com/files/styles/original_-_local_copy/entityshare/30332%3Fitok%3DMstdwizF">
         </div>
     </div>
+      </section>
+
+
     <div class="page-footer">
 
         <a class="fb-ic">
