--- a/contactUs.html
+++ b/contactUs.html
@@ -16,7 +16,7 @@
 
   </head>
 
-  <body>
+<body>
 
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-custom">
@@ -48,67 +48,66 @@
         </div>
     </nav>
 
+    <div class="bg ">
+        <img class="bgs" src="./sub-header-bg.jpg" />
+    </div>
+
     <section class="tops">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-sm-12" id="homeContent">
                     <p> Have a question? </p>
-                    <h1> Contact Techequilla <h1>
-                    <h4> We are here to help and answer any question you might have. </h4>
+                    <h3 class="contact">Contact Techequilla </h3>
+                    <h6> We are here to help and answer any question you might have. </h6>
                 </div>
             </div>
         </div>
     </section>
 
     <section class="forms">
-      <form class="container" style="box-sizing: border-box;">
+        <form class="container">
 
-        <div class="form-group">
-          <label for="firstName">First Name</label>
-          <input type="text" class="form-control" id="firstName" placeholder="First name">
-        </div>
+            <div class="form-group">
+                <label for="firstName">First Name</label>
+                <input type="text" class="form-control" id="firstName" placeholder="First name">
+            </div>
 
-        <div class="form-group">
-          <label for="lastName">Last Name</label>
-          <input type="text" class="form-control" id="lastName" placeholder="Last name">
-        </div>
+            <div class="form-group">
+                <label for="lastName">Last Name</label>
+                <input type="text" class="form-control" id="lastName" placeholder="Last name">
+            </div>
 
-        <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-        </div>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Email address</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
 
-        <div class="form-group">
-          <label for="question">Your Questions? </label>
-          <input type="text" class="form-control" id="question" style="height:200px">
-        </div>
+            <div class="form-group">
+                <label for="question">Your Questions? </label>
+                <input type="text" class="form-control" id="question" style="height:200px">
+            </div>
 
-        <button type="submit" class="btn buttonA">Send Message</button>
-      </form>
+            <button type="submit" class="btn buttona">Send Message</button>
+        </form>
     </section>
 
-    <div class="bg">
-      <img class="bgs" src="./ContactUs.jpg" />
-    </div>
-
     <section class="portfolio container" id="portfolio">
-      <div class="row">
+        <div class="row">
 
-        <div class="col-sm-12 col-lg-4 announceImg">
-          <img class="rounded-circle" alt="100x100" src="https://avatars0.githubusercontent.com/u/46641503?s=460&u=f983dc0dfa8fb9bde0af7e2f8015c43533b275fa&v=4" data-holder-rendered="true">
-          <h2 class="my-5 h2">Smaranjit Ghose</h2>
+            <div class="col-sm-12 col-lg-5 announceImg">
+                <img class="rounded-circle" alt="100x100" src="https://avatars0.githubusercontent.com/u/46641503?s=460&u=f983dc0dfa8fb9bde0af7e2f8015c43533b275fa&v=4" data-holder-rendered="true">
+            </div>
+
+            <div class="col-sm-12 col-lg-7 announce">
+                <h3> Organisation Admin</h3>
+                <h6> Our organisation exists because of his contributions and support! </h6>
+                <button type="button" class="btn btn-sm buttona">GitHub</button>
+            </div>
+
+
         </div>
-
-        <div class="col-sm-12 col-lg-8 announce">
-          <h1> Organisation Admin</h1>
-          <p> Our organisation exists because of his contributions and support! <p>
-          <button type="button" class="btn btn-sm buttonA">GtiHub</button>
-        </div>
-
-
-    </div>
-      </section>
+    </section>
 
     <div class="page-footer">
 
@@ -144,5 +143,5 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-  </body>
+</body>
 </html>
