Made Contact Us Responsive and added Redirections

--- a/contactUs.html
+++ b/contactUs.html
@@ -20,7 +20,7 @@
 
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-custom">
-        <a class="navbar-brand" href="#" style="font-size:1rem;"> Techequilla </a>
+        <a class="navbar-brand" href="index.html" style="font-size:1rem;"> Techequilla </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -38,11 +38,11 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-brand" href="#about">Teams</a>
+                    <a class="nav-brand" href="teams.html">Teams</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-brand" href="#about">Contact Us</a>
+                    <a class="nav-brand" href="contactUs.html">Contact Us</a>
                 </li>
             </ul>
         </div>
