--- a/teams.html
+++ b/teams.html
@@ -6,9 +6,9 @@
     <script src="https://kit.fontawesome.com/5dbf1108d2.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-</head>
-<link rel="stylesheet" type="text/css" href="css/teams.css">
-<link href="https://fonts.googleapis.com/css?family=Antic+Slab&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" type="text/css" href="css/teams.css">
+    <link href="https://fonts.googleapis.com/css?family=Antic+Slab&display=swap" rel="stylesheet">
 
   </head>
 
@@ -16,7 +16,7 @@
 
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-custom">
-        <a class="navbar-brand" href="#" style="font-size:1rem;"> Techequilla </a>
+        <a class="navbar-brand" href="index.html" style="font-size:1rem;"> Techequilla </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -34,11 +34,11 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-brand" href="#about">Teams</a>
+                    <a class="nav-brand" href="teams.html">Teams</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-brand" href="#about">Contact Us</a>
+                    <a class="nav-brand" href="contactUs.html">Contact Us</a>
                 </li>
             </ul>
         </div>
