--- a/index.html
+++ b/index.html
@@ -9,151 +9,154 @@
     <link href="https://fonts.googleapis.com/css?family=Antic+Slab&display=swap" rel="stylesheet">
   </head>
 
-<body>
+  <body>
 
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-custom">
-        <a class="navbar-brand" href="#" style="font-size:1rem;"> Techequilla </a>
+      <a class="navbar-brand" href="index.html" style="font-size:1rem;"> Techequilla </a>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
 
-                <li class="nav-item">
-                    <a class="nav-brand" href="#about">Achievements</a>
-                </li>
+          <li class="nav-item">
+            <a class="nav-brand" href="#about">Achievements</a>
+          </li>
 
-                <li class="nav-item">
-                    <a class="nav-brand" href="#about">Announcements</a>
-                </li>
+          <li class="nav-item">
+            <a class="nav-brand" href="#about">Announcements</a>
+          </li>
 
-                <li class="nav-item">
-                    <a class="nav-brand" href="#about">Teams</a>
-                </li>
+          <li class="nav-item">
+            <a class="nav-brand" href="teams.html">Teams</a>
+          </li>
 
-                <li class="nav-item">
-                    <a class="nav-brand" href="#about">Contact Us</a>
-                </li>
-            </ul>
-        </div>
+          <li class="nav-item">
+            <a class="nav-brand" href="contactUs.html">Contact Us</a>
+          </li>
+        </ul>
+      </div>
     </nav>
 
     <section class="tops">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 col-sm-12" id="homeContent">
-                    <p> A Website built for the Community by the Community </p>
-                </div>
-            </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 col-sm-12" id="homeContent">
+            <p> A Website built for the Community by the Community </p>
+          </div>
         </div>
+      </div>
 
-        <div class="text-center" id="buttons">
-            <button type="button" class="btn btn-lg button1">View Us</button>
-            <button type="button" class="btn btn-lg button2">Join Us</button>
-        </div>
+      <div class="text-center" id="buttons">
+        <button type="button" class="btn btn-lg button1">View Us</button>
+        <button type="button" class="btn btn-lg button2">Join Us</button>
+      </div>
     </section>
 
     <section class="bgc">
 
-        <div class="bg">
-            <img class="bgs" src="./webtech-1.jpg" />
-        </div>
+      <div class="bg">
+        <img class="bgs" src="./webtech-1.jpg" />
+      </div>
 
-        <div class="row justify-content-center top-sec">
-            <div class="card text-center" style="width: 30rem; height: 25rem" ;>
-                <div class="card-body">
-                    <h5 class="card-title">Welcome to Techequilla Guide</h5>
-                    <p class="card-text">We are a professional community that activates teachers' creativity to solve the biggest challenges in education today.</p>
-                </div>
-                <div class="card-footer text-muted">
-                    <a href="#" class="btn btn-primary btn-block button3">Join Our Team Now!</a>
-                </div>
-            </div>
+      <div class="row justify-content-center top-sec">
+        <div class="card text-center" style="width: 30rem; height: 25rem" ;>
+          <div class="card-body">
+            <h5 class="card-title">Welcome to Techequilla Guide</h5>
+            <p class="card-text">We are a professional community that activates teachers' creativity to solve the biggest challenges in education today.</p>
+          </div>
+
+          <div class="card-footer text-muted">
+            <a href="#" class="btn btn-primary btn-block button3">Join Our Team Now!</a>
+          </div>
         </div>
+      </div>
 
     </section>
+
     <section class="ach">
-        <div class="Achievements">
-            <h1>Achievements!</h1>
-            <p> Be inspired by the innovation of the Community </p>
+      <div class="Achievements">
+        <h1>Achievements!</h1>
+        <p> Be inspired by the innovation of the Community </p>
+      </div>
+      <div class="my-achieve">
+        <div class="achieves">
+          <div class="icon-container">
+            <i class="fas fa-layer-group"></i>
+          </div>
+          <h1>
+            Users
+          </h1>
+          <p>
+            Beautiful Web Designs to attract users.
+          </p>
         </div>
-        <div class="my-achieve">
-            <div class="achieves">
-                <div class="icon-container">
-                    <i class="fas fa-layer-group"></i>
-                </div>
-                <h1>
-                    Users
-                </h1>
-                <p>
-                    Beautiful Web Designs to attract users.
-                </p>
-            </div>
-            <div class="achieves">
-                <div class="icon-container">
-                    <i class="fas fa-code"></i>
-                </div>
-                <h1>
-                    Reusability
-                </h1>
-                <p>
-                    Clone it and the design is all yours.
-                </p>
-            </div>
-            <div class="achieves">
-                <div class="icon-container">
-                    <i class="fas fa-chart-bar"></i>
-                </div>
-                <h1>
-                    Results
-                </h1>
-                <p>
-                    Our community is growing everyday!
-                </p>
-            </div>
+        <div class="achieves">
+          <div class="icon-container">
+            <i class="fas fa-code"></i>
+          </div>
+          <h1>
+            Reusability
+          </h1>
+          <p>
+            Clone it and the design is all yours.
+          </p>
+        </div>
+        <div class="achieves">
+          <div class="icon-container">
+            <i class="fas fa-chart-bar"></i>
+          </div>
+          <h1>
+            Results
+          </h1>
+          <p>
+            Our community is growing everyday!
+          </p>
+        </div>
 
-        </div>
+      </div>
 
     </section>
+
     <section class="portfolio" id="portfolio">
 
-    <div class="row">
+      <div class="row">
         <div class="col-sm-12 col-lg-6 announce">
           <p> Always be updated about our upcoming annoucements! <p>
           <button type="button" class="btn btn-sm buttonA">See More</button>
         </div>
 
         <div class="col-sm-12 col-lg-6 announceImg">
-            <img class="animg" src="https://www.trainingjournal.com/sites/www.trainingjournal.com/files/styles/original_-_local_copy/entityshare/30332%3Fitok%3DMstdwizF">
+          <img class="animg" src="https://www.trainingjournal.com/sites/www.trainingjournal.com/files/styles/original_-_local_copy/entityshare/30332%3Fitok%3DMstdwizF">
         </div>
-    </div>
-      </section>
+      </div>
+    </section>
 
 
     <div class="page-footer">
 
-        <a class="fb-ic">
-            <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 "> </i>
-        </a>
+      <a class="fb-ic">
+        <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 "> </i>
+      </a>
 
-        <a class="tw-ic">
-            <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 "> </i>
-        </a>
+      <a class="tw-ic">
+        <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 "> </i>
+      </a>
 
-        <a class="gplus-ic">
-            <i class="fab fa-github fa-lg white-text mr-md-5 mr-3 "> </i>
-        </a>
+      <a class="gplus-ic">
+        <i class="fab fa-github fa-lg white-text mr-md-5 mr-3 "> </i>
+      </a>
 
-        <a class="li-ic">
-            <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 "> </i>
-        </a>
+      <a class="li-ic">
+        <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 "> </i>
+      </a>
 
-        <a class="ins-ic">
-            <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 "> </i>
-        </a>
+      <a class="ins-ic">
+        <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 "> </i>
+      </a>
 
     </div>
 
@@ -162,10 +165,6 @@
     <script>
         new Darkmode().showWidget();
     </script>
-
-
-
-
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
