Html of team page modified

--- a/teams.html
+++ b/teams.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Page Title</title>
+    <title>Our Team</title>
 
     <script src="https://kit.fontawesome.com/5dbf1108d2.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/teams.css">
     <link href="https://fonts.googleapis.com/css?family=Antic+Slab&display=swap" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
-  </head>
+
+</head>
 
 <body>
 
@@ -18,7 +20,8 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-custom">
         <a class="navbar-brand" href="index.html" style="font-size:1rem;"> Techequilla </a>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -56,37 +59,181 @@
         </div>
     </div>
 
-    <div class="pictures">
-        <div class="row text-center">
-            <div class="col-md-4 mb-4">
-                <img class="rounded-circle" alt="100x100" src="https://avatars0.githubusercontent.com/u/46641503?s=460&u=f983dc0dfa8fb9bde0af7e2f8015c43533b275fa&v=4" data-holder-rendered="true">
-                <h2 class="my-5 h2">Smaranjit Ghose</h2>
-            </div>
 
-            <div class="col-md-4 mb-4">
-                <img class="rounded-circle" alt="100x100" src="https://avatars1.githubusercontent.com/u/40017559?s=460&u=1f74977f5a5fd09b42a16df416e9f6674b9b783c&v=4" data-holder-rendered="true">
-                <h2 class="my-5 h2">Anush Bhatia</h2>
-            </div>
+    <!-- TEAM -->
 
-            <div class="col-md-4 mb-4">
-                <img class="rounded-circle" alt="100x100" src="https://avatars0.githubusercontent.com/u/32226270?s=460&u=20e642d86100be383983da16f0fdf65d436abb0f&v=4" data-holder-rendered="true">
-                <h2 class="my-5 h2">Suhrid Datta</h2>
+    <div class="containerr">
+        <div class="card_1">
+            <div class="card__side card__side--front">
+                <img class="team-img" src="./assets/Images/smaranjit Ghose.png" alt="">
+                <div class="sma">
+                    Smaranjit Ghose
+                    <div class="desma">
+                        Project Admin
+                    </div>
+                </div>
+            </div>
+            <div class="card__side card__side--back card__side--back-1">
+                <p class="about">About...</p>
+                <div class="desc">
+                    Life Long Learner,
+                    Open Source Mentor,
+                    Computer Vision and Deep Learning Fanatic,
+                    Community Evangelist at girlscriptChennai
+                </div>
+                <div class="social-menu">
+                    <ul>
+                        <li><a href=""><i class="fa fa-facebook"></i></a></li>
+                        <li><a href=""><i class="fa fa-instagram"></i></a></li>
+                        <li><a href=""><i class="fa fa-github"></i></a></li>
+                        <li><a href=""><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                </div>
             </div>
         </div>
-
-        <div class="row text-center row2">
-            <div class="col-md-4 mb-4 mx-auto">
-                <img class="rounded-circle" alt="100x100" src="https://avatars1.githubusercontent.com/u/44338419?s=460&u=13140f5764ea6574d8053727c869ceb95db7ba3e&v=4" data-holder-rendered="true">
-                <h2 class="my-5 h2">Sukkrit Sharma</h2>
+        <div class="card_2">
+            <div class="card__side card__side--front">
+                <img class="team-img" src="./assets/Images/Anush_Bhatia.jfif" alt="">
+                <div class="anu">
+                    Anush Bhatia
+                    <div class="deanu">
+                        Project Maintainer
+                    </div>
+                </div>
             </div>
+            <div class="card__side card__side--back card__side--back-1">
+                <p class="about">About...</p>
+                <div class="desc">
+                    Machine Learning Enthusiast, Open Source Contributor
+                </div>
+                <div class="social-menu">
+                    <ul>
+                        <li><a href=""><i class="fa fa-facebook"></i></a></li>
+                        <li><a href=""><i class="fa fa-instagram"></i></a></li>
+                        <li><a href=""><i class="fa fa-github"></i></a></li>
+                        <li><a href=""><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="card_3">
+            <div class="card__side card__side--front">
+                <img class="team-img" src="./assets/Images/Ousnik_Polley.png" alt="">
+                <div class="ous">
+                    Ousnik Polley
+                    <div class="deous">
+                        Project Maintainer
+                    </div>
+                </div>
+            </div>
+            <div class="card__side card__side--back card__side--back-1">
+                <p class="about">About...</p>
+                <div class="desc">
+                    Mobile Application Developer, Flutter Developer
+                </div>
+                <div class="social-menu">
+                    <ul>
+                        <li><a href=""><i class="fa fa-facebook"></i></a></li>
+                        <li><a href=""><i class="fa fa-instagram"></i></a></li>
+                        <li><a href=""><i class="fa fa-github"></i></a></li>
+                        <li><a href=""><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="card_4">
+            <div class="card__side card__side--front">
+                <img class="team-img" src="./assets/Images/Saswat_Nayak.jfif" alt="">
+                <div class="sas">
+                    Saswat Nayak
+                    <div class="desas">
+                        Project Maintainer
+                    </div>
+                </div>
+            </div>
+            <div class="card__side card__side--back card__side--back-1">
+                <p class="about">About...</p>
+                <div class="desc">
+                    Open Source Contributor
+                </div>
+                <div class="social-menu">
+                    <ul>
+                        <li><a href=""><i class="fa fa-facebook"></i></a></li>
+                        <li><a href=""><i class="fa fa-instagram"></i></a></li>
+                        <li><a href=""><i class="fa fa-github"></i></a></li>
+                        <li><a href=""><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="card_5">
+            <div class="card__side card__side--front">
+                <img class="team-img" src="./assets/Images/sukkrit_Sharma.jfif" alt="">
+                <div class="suk">
+                    Sukkrit Sharma
+                    <div class="desuk">
+                        Project Maintainer
+                    </div>
+                </div>
+            </div>
+            <div class="card__side card__side--back card__side--back-1">
+                <p class="about">About...</p>
+                <div class="desc">
+                    Computer Vision and Deep Learning Researcher Open Source Mentor
+                </div>
+                <div class="social-menu">
+                    <ul>
+                        <li><a href=""><i class="fa fa-facebook"></i></a></li>
+                        <li><a href=""><i class="fa fa-instagram"></i></a></li>
+                        <li><a href=""><i class="fa fa-github"></i></a></li>
+                        <li><a href=""><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="card_6">
+            <div class="card__side card__side--front">
+                <img class="team-imgp1" src="./assets/Images/Anjali_Soni.jpg" alt="">
+                <img class="team-imgp2" src="./assets/Images/Sravya_Prathapani.jfif" alt="">
 
-            <div class="col-md-4 mb-4 mx-auto">
-                <img class="rounded-circle" alt="100x100" src="https://avatars2.githubusercontent.com/u/36136676?s=460&v=4" data-holder-rendered="true">
-                <h2 class="my-5 h2">swat1998</h2>
+                <div class="cgr1">
+                    Anjali Soni & Sravya Prathapani
+                    <div class="degr1">
+                        Project Contributor
+                        <div class="tnm">
+                            Team: LetUsCode
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card__side card__side--back card__side--back-1">
+                <p class="about">About...</p>
+                <div class="desc">
+                    Student of IIT Guwahati, Competitive Programmer, Open Source Contributor
+                </div>
+            </div>
+        </div>
+        <div class="card_7">
+            <div class="card__side card__side--front">
+                <img class="team-imgp1" src="" alt="">
+                <img class="team-imgp2" src="" alt="">
+
+                <div class="cgr2">
+                    ------------
+                    <div class="degr2">
+                        Project Contributor
+                    </div>
+                </div>
+            </div>
+            <div class="card__side card__side--back card__side--back-1">
+                <p class="about">About...</p>
+                <div class="desc">
+                </div>
             </div>
         </div>
     </div>
 
+    <!-- FOOTER -->
     <div class="page-footer">
 
         <a class="fb-ic">
@@ -110,18 +257,18 @@
         </a>
 
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.5/lib/darkmode-js.min.js"></script>
     <script>
         new Darkmode().showWidget();
     </script>
-
-
-
-
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 
 
 </body>
+
 </html>
