--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 col-sm-12" id="homeContent">
-            <p> A Website built for the Community by the Community </p>
+            <p> A Project built by the Community for the Community </p>
           </div>
         </div>
       </div>
