Images cleaned, added redirections, responsive

--- a/contactUs.html
+++ b/contactUs.html
@@ -49,7 +49,7 @@
     </nav>
 
     <div class="bg ">
-        <img class="bgs" src="./sub-header-bg.jpg" />
+        <img class="bgs" src="./assets/Images/sub-header-bg.jpg" />
     </div>
 
     <section class="tops">
