--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link href="https://fonts.googleapis.com/css?family=Antic+Slab&display=swap" rel="stylesheet">
+
   </head>
 
   <body>
@@ -40,20 +41,24 @@
         </ul>
       </div>
     </nav>
-    
-    <section class="tops">
-       
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+
+
+    <section class="carousel">
+
+        <div id="carouselExampleIndiacators" class="carousel slide" data-ride="carousel">
+
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
             </ol>
+
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./assets/images/dare.webp" class="d-block w-100" alt="...">
+                    <img src="./assets/Images/dare.webp" class="d-block w-100" alt="..." width="1100" height="500">
                 </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndiacators" role="button" data-slide="prev">
+            </div>
+
+            <a class="carousel-control-prev" href="#carouselExampleIndiacators" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span style="color: black;" class="sr-only">Previous</span>
                 </a>
@@ -63,8 +68,9 @@
                 </a>
             </div>
 
-</section>
-    <section class="tops">
+      </section>
+
+    <section class="homeContent">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 col-sm-12" id="homeContent">
@@ -82,7 +88,7 @@
     <section class="bgc">
 
       <div class="bg">
-        <img class="bgs" src="./webtech-1.jpg" />
+        <img class="bgs" src="./assets/Images/webtech-1.jpg" />
       </div>
 
       <div class="row justify-content-center top-sec">
