--- a/teams.html
+++ b/teams.html
@@ -45,7 +45,7 @@
     </nav>
 
     <div class="bg">
-        <img class="bgs" src="teamsc.jpg" />
+        <img class="bgs" src="./assets/Images/webtech-1.jpg" />
     </div>
 
     <div class="row">
