--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/index.css">
-    <link rel="stylesheet" href="blog.css">
+    <link rel="stylesheet" href="css/blog.css">
     <link href="https://fonts.googleapis.com/css?family=Antic+Slab&display=swap" rel="stylesheet">
 </head>
 
