--- a/projects.html
+++ b/projects.html
@@ -41,6 +41,9 @@
                 <li class="nav-item">
                     <a class="nav-brand" href="contactUs.html">Contact Us</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-brand" href="#">Projects</a>
+                </li>
             </ul>
         </div>
     </nav>
@@ -284,6 +287,10 @@
         </a>
 
     </div>
+<script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.5/lib/darkmode-js.min.js"></script>
+    <script>
+        new Darkmode().showWidget();
+    </script>
 
 
 
