Update the image link

--- a/teams.html
+++ b/teams.html
@@ -48,7 +48,7 @@
     </nav>
 
     <div class="bg">
-        <img class="bgs" src="./assets/Images/webtech-1.jpg" />
+        <img class="bgs" src="./assets/Images/teamsc.jpg" />
     </div>
 
     <div class="row">
