removed some errors

--- a/teams.html
+++ b/teams.html
@@ -120,7 +120,7 @@
           <img
             class="rounded-circle"
             alt="100x100"
-            src="./assets/Images/Anush_Bhatia.jfif"
+            src="./assets/Images/Anush Bhatia.jfif"
             data-holder-rendered="true"
           />
           <div class="namesm">Anush Bhatia</div>
@@ -152,7 +152,7 @@
           <img
             class="rounded-circle"
             alt="100x100"
-            src="./assets/Images/Ousnik_Polley.png"
+            src="./assets/Images/Ousnik Polley.png"
             data-holder-rendered="true"
           />
           <div class="namesm">Ousnik Polley</div>
@@ -184,7 +184,7 @@
           <img
             class="rounded-circle"
             alt="100x100"
-            src="./assets/Images/Saswat_Nayak.jfif"
+            src="./assets/Images/Saswat Nayak.jfif"
             data-holder-rendered="true"
           />
           <div class="namesm">Saswat Nayak</div>
@@ -216,7 +216,7 @@
           <img
             class="rounded-circle"
             alt="100x100"
-            src="./assets/Images/sukkrit_Sharma.jfif"
+            src="./assets/Images/sukkrit Sharma.jfif"
             data-holder-rendered="true"
           />
           <div class="namesm">Sukkrit Sharma</div>
