Updated Broken Links

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-brand" href="contactUs.html">Contact Us</a>
+            <a class="nav-brand" href="contact.html">Contact Us</a>
           </li>
             
            <li class="nav-item">
